--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+coverage
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+test_crypto.js
+output.txt
+.vscode/
